--- a/_units/10.md
+++ b/_units/10.md
@@ -197,7 +197,7 @@ As the above example demonstrates, one advantage of the betting paradigm is that
 ## Probe Tone Paradigm
 
 Perhaps the most widely used methodology in music perception cognition, the probe tone paradigm (Krumhansl & Kessler, 1983) measures musical expectancy using goodness-of-fit ratings. In the probe tone paradigm, the participants listen to a melody, which can be a scale, a well-known melody, or an unfamiliar melody. The melody is followed by a tone, and the participant's task is to rate how well the last tone (called the probe tone) fits with the preceding melody. 
-Click here for a demo of the probe tone paradigm. 
+Click [here for a demo patch](https://github.com/MUTOR-2/MUTOR/raw/master/assets/patches/unit10/betting.maxpat) of the probe tone paradigm. 
 
 Some typical profiles are shown here (see also sections 6 and 7 in Unit 5: Pitch, Intervals and Key Areas):
 
