--- a/_units/10.md
+++ b/_units/10.md
@@ -246,7 +246,7 @@ Having covered the various methodologies used to empirically observe the effects
 
 One commonly used experimental method for infants is the head turn paradigm. The head turn paradigm makes use of the fact that infants tend to turn their heads to look at novel objects, but the look time is significantly reduced for repetitive (boring) objects. For instance, when a light comes on for the first time in an experiment, infants turn to look for an extended time at the light, but after many repetitions of the same light coming on, they look for less time because of their habituation towards repeated events. If the light were to suddenly come on in a different colour, however, infants tend to dishabituate, that is, they tend to look for longer again. One interpretation of these typically results is that infants tend to look longer at unexpected events or objects. 
 
-In the head turn paradigm for musical expectation, the light is usually paired with a speaker which plays different musical sounds. In an experiment using groups of musical tones, Saffran et al (1999) paired groups of three tones together with predictable probabilities. For instance, After hearing a stream of tones with these predictable probabilities between them, infants showed a habituation effect towards groups of tones that had been presented with high transitional probability, but a dishabituation towards tone groups with low transitional probability. These results suggest that infants could learn to expect more probable tone groups. 
+In the head turn paradigm for musical expectation, the light is usually paired with a speaker which plays different musical sounds. In an experiment using groups of musical tones, Saffran et al (1999) paired groups of three tones together with predictable probabilities. For instance, After hearing a stream of tones with these predictable probabilities between them, infants showed a habituation effect towards groups of tones that had been presented with high transitional probability (also see section 8.3 of Unit 8: Gestalt and Melody), but a dishabituation towards tone groups with low transitional probability. These results suggest that infants could learn to expect more probable tone groups. 
  
 {% include img-figure url="/MUTOR/assets/images/unit10_head_turn_lit.gif" description="head_turn_lit.gif" %}
 {% include img-figure url="/MUTOR/assets/images/unit10_head_turn_unlit.gif" description="head_turn_unlit.gif" %}
