new images and updates to relevant units

--- a/_units/04.md
+++ b/_units/04.md
@@ -380,11 +380,20 @@ the experience of it is as quite a smooth sonority. This is likely due to
 the effects of phase cancellation which result in a waveform with minimal
 amplitude modulation. A simple example of this can be seen here:
 
-{% include img-figure url="/MUTOR/assets/images/cluster-v-440-466.png"
-description="Top: Sum of two sinusoids at 440 Hz and 466.1638 Hz
-(minor second). Middle-top: Sum of 40 sinusoids at random frequencies
-between 440 Hz and 466.1638 Hz, with random phases. Middle Bottom:
-Closeup of the top plot. Bottom: Closeup of the middle-top plot." %}
+{% include img-figure url="/MUTOR/assets/images/minor_second_pair.png"
+description="Sum of two sinusoids at 440 Hz and 466.1638 Hz
+(minor second). " %}
+{% assign myfigref = fig_minor_second_pair %}
+
+{% include img-figure url="/MUTOR/assets/images/minor_second_cluster.png"
+description="Sum of 40 sinusoids at random frequencies
+between 440 Hz and 466.1638 Hz, with random phases." %}
+
+{% include img-figure url="/MUTOR/assets/images/minor_second_pair_closeup.png"
+description="Closeup of two sinusoids at 440 Hz and 466.1638 Hz." %}
+
+{% include img-figure url="/MUTOR/assets/images/minor_second_cluster_closeup.png"
+description="Closeup of 40 sinusoids between 440 Hz and 466.1638 Hz." %}
 
 {% include begin-figure description="Ligeti, Atmosph&egrave;res." %}
 <audio controls>
