--- a/_units/06.md
+++ b/_units/06.md
@@ -69,7 +69,8 @@ and the spectral representation of a sound gives us information about how that
 energy is distributed.
 
 Typically, we look at a spectrum on a 2D plot, like so:
-{% include img-figure url="/MUTOR/assets/images/time-vs-freq-domain1.png" description="Time-domain vs frequency-domain representations of a signal." %}
+{% include img-figure url="/MUTOR/assets/images/time-domain.png" description="Time-domain representation of a signal." %}
+{% include img-figure url="/MUTOR/assets/images/frequency-domain.png" description="Frequency-domain representation of a signal." %}
 In the plot on top, we have a familiar sine wave; the vertical axis
 represents *amplitude*, and the time is along the horizontal axis, which is 
 why we refer to this representation as the *time-domain*. In the bottom plot,
