--- a/_units/12.md
+++ b/_units/12.md
@@ -14,6 +14,7 @@ authors:
 
 topics: [embodied cognition, music performance, dance, motion capture, interactive performance systems, physiological responses, audiovisual, expressiveness]
 test_questions:
+- Musician move their body more than would be necessary for producing the sounds on their instruments. Why is this so?
 
 ###
 # page layout:
