--- a/_units/12.md
+++ b/_units/12.md
@@ -16,7 +16,7 @@ topics: [embodied cognition, music performance, dance, motion capture, interacti
 test_questions:
 - Musician move their body more than would be necessary for producing the sounds on their instruments. Why is this so?
 -	Are there any commonalities in musicians’ body movements across different instruments?
--	What does "mapping" mean in the context of electronic music? And what are the challenges involved? 
+-	What does _mapping_ mean in the context of electronic music? And what are the challenges involved? 
 
 ###
 # page layout:
