--- a/_units/12.md
+++ b/_units/12.md
@@ -15,6 +15,12 @@ authors:
 topics: [embodied cognition, music performance, dance, motion capture, interactive performance systems, physiological responses, audiovisual, expressiveness]
 test_questions:
 - Musician move their body more than would be necessary for producing the sounds on their instruments. Why is this so?
+- Are there any commonalities in musicians’ body movements across different instruments?
+- What does "mapping" mean in the context of electronic music? And what are the challenges involved? 
+- How could body movement be used in artistic performances (e.g. creating sound/music)?
+- Does the "rock and roll threshold" only work for rock and roll music?
+- Why could it be easier to capture certain instruments using optical motion capture than others?
+- What could be advantages and challenges when trying to track/record movement data outside the lab environment (e.g., during concerts or artistic performances)?
 
 ###
 # page layout:
