--- a/_units/12.md
+++ b/_units/12.md
@@ -237,31 +237,31 @@ The Musical Gesture Toolbox (https://www.uio.no/ritmo/english/research/labs/four
 
 
 # References
-Behne, K. -E. (1990). “Blicken Sie auf die Pianisten?!” Zur bildbeeinflussten Beurteilung von Klaviermusik im Fernsehen [Do you watch the pianists? On visually influenced judgements of piano music]. Medienpsychologie, 2(2), 115–131.
-Behne, K.-E., & Wöllner, C. (2011). Seeing or hearing the pianists? A synopsis of an early audiovisual perception experiment and a replication. Musicae Scientiae, 15(3), 324-342.
-Broughton, M., & Stevens, C. (2009). Music, movement and marimba: an investigation of the role of movement and gesture in communicating musical expression to an audience. Psychology of Music, 37(2), 137–153. https://doi.org/10.1177/0305735608094511
-Burger, B., Saarikallio, S., Luck, G., Thompson, M.R., & Toiviainen, P. (2013a). Relationships between perceived emotions in music and music-induced movement. Music Perception, 30(5), 519-535. 
-Burger, B., Thompson, M.R., Saarikallio, S., Luck, G., & Toiviainen, P. (2013b). Influences of rhythm- and timbre-related musical features on characteristics of music-induced movement. Frontiers in Psychology, 4:183. 
-Burger, B., & Toiviainen, P. (2020). Embodiment in Electronic Dance Music: Effects of musical content and structure on body movement. Musicae Scientiae, 24(2), 186-205.
-Burger, B. & Toiviainen, P. (2013). MoCap Toolbox – A Matlab toolbox for computational analysis of movement data. In R. Bresin (Ed.), Proceedings of the 10th Sound and Music Computing Conference (SMC10) (pp. 172–178). KTH. Stockholm, Sweden.
-Carlson, E., Burger, B., & Toiviainen, P. (2018). Dance like someone is watching: A social relations model study of music-induced movement. Music & Science, 1.
-Chapados, C., & Levitin, D.J. (2008). Cross-modal interactions in the experience of musical performances: physiological correlates. Cognition, 108(3). 639-651. 
-Davidson, J.W. (1993). Visual perception of performance manner in the movements of solo musicians. Psychology of Music, 21, 103–113
-Hajdu, G. (2017). Embodiment and disembodiment in networked music performance. In C. Wöllner (ed.), Body, sound and space in music and beyond: Multimodal explorations (pp. 257–278). New York: Routledge.
-Keller, P. E., Knoblich, G., & Repp, B. H. (2007). Pianists duet better when they play with themselves: On the possible role of action simulation in synchronization. Consciousness and Cognition, 16, 102–111.
-Leman, M. (2007). Embodied music cognition and mediation technology. MIT Press. 
-Luck, G., Saarikallio, S., Burger, B., Thompson, M.R., & Toiviainen, P. (2010). Effects of the Big Five and musical genre on music-induced movement. Journal of Research in Personality, 44(6), 714-720. 
-Miranda, E.R., & Wanderley. M.M. (2006). New Digital Musical Instruments: Control and interaction beyond the keyboard. Madison, WI: A-R Editions.
-Schutz, M., & Lipscomb, S. (2007). Hearing gestures, seeing music: vision influences perceived tone duration. Perception, 36(6), 888–897. https://doi.org/10.1068/p5635
-Solberg, R.T., & Jensenius, A.R. (2019). Group behaviour and interpersonal synchronization to electronic dance music. Musicae Scientiae, 23(1), 111-134.
-Todd, N.P.M.A. & Cody, F.W. (2000). Vestibular responses to loud dance music: A physiological basis of the “rock and roll threshold”. Journal of the Acoustical Society of America 107, 496. https://doi.org/10.1121/1.428317
-Toiviainen, P., Luck, G., & Thompson, M.R. (2010). Embodied meter: Hierarchical eigenmodes in music-induced movement. Music Perception, 28(1), 59-70.
-Trainor et al. (2009). The primal role of the vestibular system in determining musical rhythm
-Van Dyck, E., Moelants, D., Demey, M., Deweppe, A., Coussement, P., & Leman, M. (2013). The impact of the bass drum on human dance movement. Music Perception, 30(4), 349-359.
-Varela, F.J., Thompson, E., & Rosch, E. (1991). The embodied mind: Cognitive science and human experience. MITPress. 
-Vines, B.W., Krumhansl, C.L., Wanderley, M.M., & Levitin, D.J. (2006). Cross-modal interactions in the perception of musical performance. Cognition, 101(1), 80-113. DOI: 10.1016/j.cognition.2005.09.003.
-Weiss, A.E., Nusseck, M. & Spahn, C. (2018). Motion types of ancillary gestures in clarinet playing and their influence on the perception of musical performance. Journal of New Music Research, 47(2), 129–142. DOI: 10.1080/09298215.2017.1413119
-Wöllner, C. (2019). Anticipated sonic actions and sounds in performance. In M. Grimshaw, M. Walther-Hansen, & M. Knakkergaard (Eds.), The Oxford handbook of sound and imagination, vol. 2 (pp. 37–57). New York: Oxford University Press.
-Wöllner, C., Deconinck, F.J.A., Parkinson, J., Hove, M.J., & Keller, P.E. (2012). The perception of prototypical motion: Synchronization is enhanced with quantitatively morphed gestures of musical conductors. Journal of Experimental Psychology: Human Perception and Performance, 38(6), 1390–1403. [DOI 10.1037/a0028130.]
+* Behne, K. -E. (1990). “Blicken Sie auf die Pianisten?!” Zur bildbeeinflussten Beurteilung von Klaviermusik im Fernsehen [Do you watch the pianists? On visually influenced judgements of piano music]. Medienpsychologie, 2(2), 115–131.
+* Behne, K.-E., & Wöllner, C. (2011). Seeing or hearing the pianists? A synopsis of an early audiovisual perception experiment and a replication. Musicae Scientiae, 15(3), 324-342.
+* Broughton, M., & Stevens, C. (2009). Music, movement and marimba: an investigation of the role of movement and gesture in communicating musical expression to an audience. Psychology of Music, 37(2), 137–153. https://doi.org/10.1177/0305735608094511
+* Burger, B., Saarikallio, S., Luck, G., Thompson, M.R., & Toiviainen, P. (2013a). Relationships between perceived emotions in music and music-induced movement. Music Perception, 30(5), 519-535. 
+* Burger, B., Thompson, M.R., Saarikallio, S., Luck, G., & Toiviainen, P. (2013b). Influences of rhythm- and timbre-related musical features on characteristics of music-induced movement. Frontiers in Psychology, 4:183. 
+* Burger, B., & Toiviainen, P. (2020). Embodiment in Electronic Dance Music: Effects of musical content and structure on body movement. Musicae Scientiae, 24(2), 186-205.
+* Burger, B. & Toiviainen, P. (2013). MoCap Toolbox – A Matlab toolbox for computational analysis of movement data. In R. Bresin (Ed.), Proceedings of the 10th * Sound and Music Computing Conference (SMC10) (pp. 172–178). KTH. Stockholm, Sweden.
+* Carlson, E., Burger, B., & Toiviainen, P. (2018). Dance like someone is watching: A social relations model study of music-induced movement. Music & Science, 1.
+* Chapados, C., & Levitin, D.J. (2008). Cross-modal interactions in the experience of musical performances: physiological correlates. Cognition, 108(3). 639-651. 
+* Davidson, J.W. (1993). Visual perception of performance manner in the movements of solo musicians. Psychology of Music, 21, 103–113
+* Hajdu, G. (2017). Embodiment and disembodiment in networked music performance. In C. Wöllner (ed.), Body, sound and space in music and beyond: Multimodal explorations (pp. 257–278). New York: Routledge.
+* Keller, P. E., Knoblich, G., & Repp, B. H. (2007). Pianists duet better when they play with themselves: On the possible role of action simulation in synchronization. Consciousness and Cognition, 16, 102–111.
+* Leman, M. (2007). Embodied music cognition and mediation technology. MIT Press. 
+* Luck, G., Saarikallio, S., Burger, B., Thompson, M.R., & Toiviainen, P. (2010). Effects of the Big Five and musical genre on music-induced movement. Journal of Research in Personality, 44(6), 714-720. 
+* Miranda, E.R., & Wanderley. M.M. (2006). New Digital Musical Instruments: Control and interaction beyond the keyboard. Madison, WI: A-R Editions.
+* Schutz, M., & Lipscomb, S. (2007). Hearing gestures, seeing music: vision influences perceived tone duration. Perception, 36(6), 888–897. https://doi.org/10.1068/p5635
+* Solberg, R.T., & Jensenius, A.R. (2019). Group behaviour and interpersonal synchronization to electronic dance music. Musicae Scientiae, 23(1), 111-134.
+* Todd, N.P.M.A. & Cody, F.W. (2000). Vestibular responses to loud dance music: A physiological basis of the “rock and roll threshold”. Journal of the Acoustical Society of America 107, 496. https://doi.org/10.1121/1.428317
+* Toiviainen, P., Luck, G., & Thompson, M.R. (2010). Embodied meter: Hierarchical eigenmodes in music-induced movement. Music Perception, 28(1), 59-70.
+* Trainor et al. (2009). The primal role of the vestibular system in determining musical rhythm
+* Van Dyck, E., Moelants, D., Demey, M., Deweppe, A., Coussement, P., & Leman, M. (2013). The impact of the bass drum on human dance movement. Music Perception, 30(4), 349-359.
+* Varela, F.J., Thompson, E., & Rosch, E. (1991). The embodied mind: Cognitive science and human experience. MITPress. 
+* Vines, B.W., Krumhansl, C.L., Wanderley, M.M., & Levitin, D.J. (2006). Cross-modal interactions in the perception of musical performance. Cognition, 101(1), 80-113. DOI: 10.1016/j.cognition.2005.09.003.
+* Weiss, A.E., Nusseck, M. & Spahn, C. (2018). Motion types of ancillary gestures in clarinet playing and their influence on the perception of musical performance. Journal of New Music Research, 47(2), 129–142. DOI: 10.1080/09298215.2017.1413119
+* Wöllner, C. (2019). Anticipated sonic actions and sounds in performance. In M. Grimshaw, M. Walther-Hansen, & M. Knakkergaard (Eds.), The Oxford handbook of sound and imagination, vol. 2 (pp. 37–57). New York: Oxford University Press.
+* Wöllner, C., Deconinck, F.J.A., Parkinson, J., Hove, M.J., & Keller, P.E. (2012). The perception of prototypical motion: Synchronization is enhanced with quantitatively morphed gestures of musical conductors. Journal of Experimental Psychology: Human Perception and Performance, 38(6), 1390–1403. [DOI 10.1037/a0028130.]
 
 {% include unit_postamble.md %}
