--- a/_units/12.md
+++ b/_units/12.md
@@ -62,7 +62,10 @@ Bodily, or more specifically, motor resonance plays a role in a seminal study of
 
 ##	Violinists
 As shown in the study by Behne, seeing a performer shapes how the music is perceived and evaluated. To what extent does this hold true for the kinematic basics of bodily movements, in contrast to the face, clothes or any other information about a person’s outer appearance? A technique developed in the 1970 by Gunnar Johansson has been widely used in music research (see example). Originally using reflective tape at important body locations, and nowadays motion capture technology (see Section 5 below for more detail), a number of relevant markers is shown in so-called point-light displays. The points in these displays may appear to be random, but as soon as they move, observers can tell what activity is carried out by the person recorded, and even whether it is a friend or a stranger walking.
-Example: A historic introductory film about the motion perception research by Johansson and colleagues (1971) https://www.youtube.com/watch?v=1F5ICP9SYLU
+Example: A historic introductory film about the motion perception research by Johansson and colleagues (1971) 
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1F5ICP9SYLU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 For her PhD, Jane Davidson (1993) was the first researcher using the point-light technique to study the bodily communication of expressiveness in music. Four violinists were asked to play either normally, in an exaggerated way or in a “deadpan” way without expressiveness. Videos of these performances were created showing only the points of the body, in versions with or without sound. A total of 21 musically experienced individuals rated the expressive intentions correctly even for visual-only videos, which led to strongest perceived differences between deadpan and exaggerated versions. Further studies by Davidson revealed that non-musicians relied particularly on the visual information.
 
@@ -107,16 +110,12 @@ Music and media technology permits the shaping of sounds by bodily gestures, wit
 
 Example: Live electronic music using Kinect
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=xPcoM7BIDZ4" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xPcoM7BIDZ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 Example: A performance of “Motion Grip” (Stockholm)
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=SlVECzvXbB4" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SlVECzvXbB4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 Since the mapping happens in real time, audiences typically perceive the cause of the sound to originate in the performer’s bodily movement. In some cases, on the other hand, if there are high latencies or large spatial distances between performer and loudspeaker (that is, the actual acoustical sound “source”), performers and audiences may experience some form of “disembodiment” (Miranda & Wanderley 2006; Hajdu, 2017; Wöllner, 2019).
@@ -124,9 +123,7 @@ Since the mapping happens in real time, audiences typically perceive the cause o
 Further technical means of shaping music by gestures are gloves, often containing accelerometers, a gyroscope and sometimes strain or bend sensors. The information of these sensors over time is then transferred to audio systems and mapped with various sound parameters. These gloves became known to wider audiences by pop musicians like Imogen Heap.
 Example: Imogen Heap explain the Mi.Mu gloves: 
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=6btFObRRD9k" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6btFObRRD9k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 #	Perceiving and responding to music with the body
@@ -147,16 +144,12 @@ Music makes us also move, be it tapping one’s foot or finger, head-banging, or
 Video examples related to Burger et al. (2013b): 
 How does music with high pulse clarity affect movement: 
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://youtu.be/oY_EOsoptVQ" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oY_EOsoptVQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 How does spectral flux in high frequency affect movement: 
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://youtu.be/4iFrxvdjfq0" 
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4iFrxvdjfq0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 
