--- a/_units/12.md
+++ b/_units/12.md
@@ -208,12 +208,12 @@ Standard capture speeds in music-related applications range from 60 to 240 frame
 
 For capturing data in three dimensions, the first step of a data collection is to calibrate the system, so that it obtains the exact position and orientation of each camera with respect to the others and the floor (see covered volume depicted in Figure below). As a result, the calibration provides origin and orientation of the Cartesian coordinate system relative to which the locations of the markers are determined. This approach yields time-series data representing the displacement of the markers in three dimensions (x, y, and z). If, additionally, the orientation of objects is of interest, so-called rigid bodies can be employed. Rigid bodies consist of at least three markers that are mounted on an object as a fixed cluster (i.e., having stable distances and angles). These markers establish their own coordinate system with the center of the marker cluster as origin and track 6DOF data (see Figure).
 
-{% include img-figure url="unit12_CoordinateSystem.png" description="Left: Light ‘cones’ sent out by each camera to construct the 3-D space. The covered volume (where markers will be recorded) is depicted in blue. Right: Different data representations: Marker in three dimensions (x, y, z) and rigid body with three markers in six dimensions (6DOF – x, y, z, pitch, roll, yaw)" %}
+{% include img-figure url="/MUTOR/assets/images/unit12_CoordinateSystem.png" description="Left: Light ‘cones’ sent out by each camera to construct the 3-D space. The covered volume (where markers will be recorded) is depicted in blue. Right: Different data representations: Marker in three dimensions (x, y, z) and rigid body with three markers in six dimensions (6DOF – x, y, z, pitch, roll, yaw)" %}
 
 
 In order to capture whole-body movement, reflective markers are placed on characteristic joints of the human body, such as head, arms, or legs (see Figure below). Where markers are places is highly dependent on the task: for example, if the lower body is not relevant and moreover usually hidden by an instrument, it is a suitable idea to use markers on the upper body only. Markers can also be places on instruments or other objects of interest. Optical motion capture systems basically record all reflections they detect without “knowing” what they represent. Thus, each marker needs to be correctly identified and labelled, usually manually (or half-automatically) after the recording. After the labelling, data are usually exported to be further processed in external software applications, such as Matlab.
 
-{% include img-figure url="unit12_markersetup.png" description="Different marker configurations. Left: Full body setup for (gross) whole-body movement. Right: Marker setup on the hand for fine motor control when playing for instance a musical instrument." %}                           
+{% include img-figure url="/MUTOR/assets/images/unit12_markersetup.png" description="Different marker configurations. Left: Full body setup for (gross) whole-body movement. Right: Marker setup on the hand for fine motor control when playing for instance a musical instrument." %}                           
 
 ## 	How to analyze mocap data?
 Several tools exist to analyze mocap data. One is the MoCap Toolbox, a Matlab toolbox that visualizes and analyses mocap data (Burger & Toiviainen, 2013). It is freely available online (https://www.jyu.fi/hytk/fi/laitokset/mutku/en/research/materials/mocaptoolbox) and offers basic functionality from reading in data, plotting the data as timeseries or single-frame marker visualizations, creating animations, gap filling to fill missing frames when markers were hidden, data transformations and rotations (e.g., to transform the data to a local coordinate system) or calculating time derivatives to receive velocity, acceleration, and jerk data. More advanced functionality encompasses kinetic analyses (e.g., for kinetic energy), periodicity analysis, and the calculation of various movement features, such as the distance travelled, the bounding rectangle (the area covered by movement) fluidity, or complexity of movement. After calculating these movement features, they can be related to, for instance, musical features, emotion ratings, or personality features (see Section 5 above). 
