--- a/_units/12.md
+++ b/_units/12.md
@@ -165,32 +165,29 @@ Motion data can be represented in several ways. Position/displacement data can b
 
 There is a wide range of sensing and motion capture technologies available, ranging from inexpensive hand-held devices, such as mobile phones and game controllers, to high-precision tracking instruments used in film and game industries as well as in research, mainly in biomechanics and sports. The technologies mostly used in music-related research and applications comprise inertial, magnetic, mechanical, and optical (camera-based) tracking systems. The following list provides a short overview of the different systems.
 
--	Inertial systems: accelerometers and gyroscopes to measure acceleration and orientation/rotation 
-   -	Affordability: inexpensive sensors, as e.g., implemented in smart phones or game controllers; high-end systems (e.g., whole-body suits) expensive 
-   -	Usability: no direct visibility needed (sensors can be hidden); unaffected by light conditions or magnetic fields; requires sensor for each joint of interest; body suit potentially motion-restricting, customized 
-   -	Portability: yes, light and small sensors and self-contained system 
-   -	Precision: the higher quality the better; drift (position error), cumulating during time/length of data capture 
-   -	Data: 6DOF derivative data, yielding drift when integrating 
-   -	Example: XSens Body Suit https://www.xsens.com/motion-capture
+- Inertial systems: accelerometers and gyroscopes to measure acceleration and orientation/rotation 
+   - Affordability: inexpensive sensors, as e.g., implemented in smart phones or game controllers; high-end systems (e.g., whole-body suits) expensive 
+   - Usability: no direct visibility needed (sensors can be hidden); unaffected by light conditions or magnetic fields; requires sensor for each joint of interest; body suit potentially motion-restricting, customized 
+   - Portability: yes, light and small sensors and self-contained system 
+   - Precision: the higher quality the better; drift (position error), cumulating during time/length of data capture 
+   - Data: 6DOF derivative data, yielding drift when integrating 
+   - Example: XSens Body Suit https://www.xsens.com/motion-capture
 
--	Magnetic systems: position and orientation of objects measured in a magnetic field 
-   -	Affordability: expensive 
-   -	Usability: no direct visibility needed; unaffected by light conditions; 
-   -	affected by other magnetic fields 
-   -	Portability: yes 
-   -	Precision: high accuracy in near-field; distortion of other magnetic 
-   -	fields and in larger areas 
-   -	Data: 6DOF 
-   -	Example: Polhemus https://polhemus.com/motion-tracking/overview/
+- Magnetic systems: position and orientation of objects measured in a magnetic field 
+   - Affordability: expensive 
+   - Usability: no direct visibility needed; unaffected by light conditions; affected by other magnetic fields 
+   - Portability: yes 
+   - Precision: high accuracy in near-field; distortion of other magnetic fields and in larger areas 
+   - Data: 6DOF 
+   - Example: Polhemus https://polhemus.com/motion-tracking/overview/
 
--	Mechanical systems: gears, potentiometers, and bend sensors measuring angles between joints 
--	Affordability: the better, the more expensive 
--	Usability: no direct visibility needed; unaffected by light conditions 
--	or magnetic fields; can be worn on the body (e.g., suit or glove) or detached as external controller device; require a sensor for each joint of interest; body suit potentially bulky, motion-restricting, customized 
--	Portability: yes 
--	Precision: high 
--	Data: angular 
--	Example: Joystick
+Mechanical systems: gears, potentiometers, and bend sensors measuring angles between joints 
+- Affordability: the better, the more expensive 
+   - Usability: no direct visibility needed; unaffected by light conditions or magnetic fields; can be worn on the body (e.g., suit or glove) or detached as external controller device; require a sensor for each joint of interest; body suit potentially bulky, motion-restricting, customized 
+   - Portability: yes 
+   - Precision: high 
+   - Data: angular 
+   - Example: Joystick
 
 -	Optical systems: camera-based systems using light (usually either light in the visible or in the infrared spectrum) and different imaging techniques 
 -	Affordability: wide range from low-quality, inexpensive devices (e.g., a web camera) to high-end, expensive systems (e.g., infrared motion capture) 
