--- a/_units/12.md
+++ b/_units/12.md
@@ -181,21 +181,23 @@ There is a wide range of sensing and motion capture technologies available, rang
    - Data: 6DOF 
    - Example: Polhemus https://polhemus.com/motion-tracking/overview/
 
-Mechanical systems: gears, potentiometers, and bend sensors measuring angles between joints 
-- Affordability: the better, the more expensive 
+
+- Mechanical systems: gears, potentiometers, and bend sensors measuring angles between joints 
+   - Affordability: the better, the more expensive 
    - Usability: no direct visibility needed; unaffected by light conditions or magnetic fields; can be worn on the body (e.g., suit or glove) or detached as external controller device; require a sensor for each joint of interest; body suit potentially bulky, motion-restricting, customized 
    - Portability: yes 
    - Precision: high 
    - Data: angular 
    - Example: Joystick
 
+
 -	Optical systems: camera-based systems using light (usually either light in the visible or in the infrared spectrum) and different imaging techniques 
--	Affordability: wide range from low-quality, inexpensive devices (e.g., a web camera) to high-end, expensive systems (e.g., infrared motion capture) 
--	Usability: unaffected by magnetic fields; partly affected by light conditions; direct visibility needed; limited capture space restricted by the cameras – in case of infrared systems: reflective markers, allowing flexible configurations, easy to attach, though might constrain or fall 
--	Portability: yes, but restricted (since large equipment) 
--	Precision: the higher quality, the better 
--	Data: 2- or 3-dimensional position data with regular video cameras; with infrared cameras also 6DOF 
--	Example: Qualisys: https://www.qualisys.com
+   -	Affordability: wide range from low-quality, inexpensive devices (e.g., a web camera) to high-end, expensive systems (e.g., infrared motion capture) 
+   -	Usability: unaffected by magnetic fields; partly affected by light conditions; direct visibility needed; limited capture space restricted by the cameras – in case of infrared systems: reflective markers, allowing flexible configurations, easy to attach, though might constrain or fall 
+   -	Portability: yes, but restricted (since large equipment) 
+   -	Precision: the higher quality, the better 
+   -	Data: 2- or 3-dimensional position data with regular video cameras; with infrared cameras also 6DOF 
+   -	Example: Qualisys: https://www.qualisys.com
 
 
 ##	How does infrared motion capture work?
