--- a/_units/12.md
+++ b/_units/12.md
@@ -91,17 +91,9 @@ Luck et al. (2010) recorded two conductors with eight motion capture markers on 
 
 Another study asked how musicians are able to play with different conductors, since their bodily gestures are always slightly different (Wöllner et al., 2012). Based on the movements of twelve conductors, a morph was constructed (see animation). For this, the kinematic information of the upper-body movements was averaged in the horizontal and vertical dimensions. Participants in an experiment watched the twelve individual as well as averaged conductors and tapped the perceived beat along with the movements. For the averaged morphed versions, jerk in the movements was reduced, and participants synchronised more consistently and accurately with these conducting patterns. Expressiveness, on the other hand, was higher for individual conductors. These results suggest that musicians mentally construct a prototypical representation of a conducting pattern, and if visual conducting movements are close to this prototype (such as for averaged movements), then this enhances synchronization with them.
 
-<html>
-  <head>
-    <title>The Auditory System</title>
-  </head>
-  <body>
-    <video controls src="/MUTOR/assets/videos/unit12_morphed_conductor_Woellner_et_al.m4v">
-      Your browser does not support the audio element.
-    </video>
-  </body>
-</html>
-
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OlOC0an77Bw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 Video animation: Point-light display of a morphed averaged conductor (center) and twelve individual conductors (Wöllner et al, 2012).
 
 
