--- a/_units/11.md
+++ b/_units/11.md
@@ -61,7 +61,10 @@ picture-in-picture" allowfullscreen></iframe>
 
 The rhythmic content of speech can be captured using the normalized Pairwise Variability Index (nPVI): the ratio between successive durations of syllables within (formula given here) 
 
-{% include img-figure url="/MUTOR/assets/images/unit11_nPVI-formula_Q320.jpg" description="nPVI formula" %} 
+\begin{equation}
+\mathrm{nPVI} = 100 \left[ \sum_{k=1}^{m-1} \left| \frac{d_k - d_{k+1}}{\frac{1}{2}(d_k + d_{k+1})} \right| \frac{1}{(m-1)} \right]
+\label{eq:nPVI}
+\end{equation}
 
 As in the examples, the speaker is able to manipulate her speech sound duration, the pattern of duration of different syllables, and the direction of her pitches is effective in conveying nationality or regionality, or where the speaker comes from. 
 
