--- a/_units/12.md
+++ b/_units/12.md
@@ -191,7 +191,7 @@ There is a wide range of sensing and motion capture technologies available, rang
 
 
 ##	How does infrared motion capture work?
-As most music-related movement research uses infrared-based optical motion capture, the following section explains this technique in more detail. Infrared cameras work with light detectable in the infrared part of the electromagnetic spectrum. Such light has longer wavelengths and lower frequencies than visible light. Infrared optical tracking is based on an active source emitting pulses of infrared light at a very high frequency. In a passive system, as the one used for this thesis research, this emitting source is usually attached to the camera (e.g., LEDs arranged as a ring around the camera lens), which in turn captures the reflections of this light produced by small, usually spherical markers attached to the tracked object. These markers are placed on points of interest, such as characteristic joints of the human body. The temporal resolution of the system is specified by the rate of the infrared light pulses. 
+As most music-related movement research uses infrared-based optical motion capture, the following section explains this technique in more detail. Infrared cameras work with light detectable in the infrared part of the electromagnetic spectrum. Such light has longer wavelengths and lower frequencies than visible light. Infrared optical tracking is based on an active source emitting pulses of infrared light at a very high frequency. In a passive system, this emitting source is usually attached to the camera (e.g., LEDs arranged as a ring around the camera lens), which in turn captures the reflections of this light produced by small, usually spherical markers attached to the tracked object. These markers are placed on points of interest, such as characteristic joints of the human body. The temporal resolution of the system is specified by the rate of the infrared light pulses. 
 
 Standard capture speeds in music-related applications range from 60 to 240 frames per second, which is sufficient for a wide range of music-related movement, such as playing most instruments and dancing (some systems can capture several thousand frames per second. However, a higher frame rate increases the amount of data without necessarily describing the movement more accurately, as human movement cannot exceed a certain tempo). Optical systems require direct visibility of the tracked objects (i.e., if a marker is hidden, e.g., by clothes, it will not be recorded). Each camera captures a two-dimensional image, commonly with white pixels indicating the markers on a black background. If several cameras are set up in a network around the capture space, data in three dimensions can be obtained (the system can construct the 3D-location of a marker as soon as two cameras detect it). The use of several cameras also increases the field of view and thus minimizes the occurrence of hidden markers. It also reduces the measurement error (at least in some cases). 
 
