--- a/_units/12.md
+++ b/_units/12.md
@@ -163,7 +163,7 @@ There is a wide range of sensing and motion capture technologies available, rang
    - Portability: yes, light and small sensors and self-contained system 
    - Precision: the higher quality the better; drift (position error), cumulating during time/length of data capture 
    - Data: 6DOF derivative data, yielding drift when integrating 
-   - Example: [XSens Body Suit](https://www.xsens.com/motion-capture)
+   - Example: XSens Body Suit [https://www.xsens.com/motion-capture](https://www.xsens.com/motion-capture)
 <br/>
 - Magnetic systems: position and orientation of objects measured in a magnetic field 
    - Affordability: expensive 
@@ -171,7 +171,7 @@ There is a wide range of sensing and motion capture technologies available, rang
    - Portability: yes 
    - Precision: high accuracy in near-field; distortion of other magnetic fields and in larger areas 
    - Data: 6DOF 
-   - Example: [Polhemus](https://polhemus.com/motion-tracking/overview/)
+   - Example: Polhemus[https://polhemus.com/motion-tracking/overview/](https://polhemus.com/motion-tracking/overview/)
 <br/>
 - Mechanical systems: gears, potentiometers, and bend sensors measuring angles between joints 
    - Affordability: the better, the more expensive 
@@ -187,7 +187,7 @@ There is a wide range of sensing and motion capture technologies available, rang
    - Portability: yes, but restricted (since large equipment) 
    - Precision: the higher quality, the better 
    - Data: 2- or 3-dimensional position data with regular video cameras; with infrared cameras also 6DOF 
-   - Example: [Qualisys](https://www.qualisys.com)
+   - Example: Qualisys[https://www.qualisys.com](https://www.qualisys.com)
 
 
 ##	How does infrared motion capture work?
@@ -205,17 +205,17 @@ In order to capture whole-body movement, reflective markers are placed on charac
 {% include img-figure url="/MUTOR/assets/images/unit12_markersetup.png" description="Different marker configurations. Left: Full body setup for (gross) whole-body movement. Right: Marker setup on the hand for fine motor control when playing for instance a musical instrument." %}                           
 
 ## 	How to analyze mocap data?
-Several tools exist to analyze mocap data. One is the [MoCap Toolbox](https://www.jyu.fi/hytk/fi/laitokset/mutku/en/research/materials/mocaptoolbox), a Matlab toolbox that visualizes and analyses mocap data (Burger & Toiviainen, 2013). It is freely available online and offers basic functionality from reading in data, plotting the data as timeseries or single-frame marker visualizations, creating animations, gap filling to fill missing frames when markers were hidden, data transformations and rotations (e.g., to transform the data to a local coordinate system) or calculating time derivatives to receive velocity, acceleration, and jerk data. More advanced functionality encompasses kinetic analyses (e.g., for kinetic energy), periodicity analysis, and the calculation of various movement features, such as the distance travelled, the bounding rectangle (the area covered by movement) fluidity, or complexity of movement. After calculating these movement features, they can be related to, for instance, musical features, emotion ratings, or personality features (see Section 5 above). 
+Several tools exist to analyze mocap data. One is the MoCap Toolbox[https://www.jyu.fi/hytk/fi/laitokset/mutku/en/research/materials/mocaptoolbox](https://www.jyu.fi/hytk/fi/laitokset/mutku/en/research/materials/mocaptoolbox), a Matlab toolbox that visualizes and analyses mocap data (Burger & Toiviainen, 2013). It is freely available online and offers basic functionality from reading in data, plotting the data as timeseries or single-frame marker visualizations, creating animations, gap filling to fill missing frames when markers were hidden, data transformations and rotations (e.g., to transform the data to a local coordinate system) or calculating time derivatives to receive velocity, acceleration, and jerk data. More advanced functionality encompasses kinetic analyses (e.g., for kinetic energy), periodicity analysis, and the calculation of various movement features, such as the distance travelled, the bounding rectangle (the area covered by movement) fluidity, or complexity of movement. After calculating these movement features, they can be related to, for instance, musical features, emotion ratings, or personality features (see Section 5 above). 
 
 
 ##	Other analysis systems
-Other systems exist that can be used integrate and analyze mocap data. [EyesWeb](http://www.infomus.org/eyesweb_ita.php), for instance, is an open platform that supports designing synchronized real-time multimedia systems and interfaces including motion capture systems, video cameras, game controllers, multichannel audio, or physiological systems and offers real-time and offline analysis possibilities. 
+Other systems exist that can be used integrate and analyze mocap data. EyesWeb[http://www.infomus.org/eyesweb_ita.php](http://www.infomus.org/eyesweb_ita.php), for instance, is an open platform that supports designing synchronized real-time multimedia systems and interfaces including motion capture systems, video cameras, game controllers, multichannel audio, or physiological systems and offers real-time and offline analysis possibilities. 
 
-The [Musical Gesture Toolbox](https://www.uio.no/ritmo/english/research/labs/fourms/software/musicalgesturestoolbox/mgt-matlab/index.html) is a toolbox (for Matlab, Python, Max, and Terminal) for analyzing music-related body motion, using sets of audio, video and motion capture data as source material (building upon MoCap Toolbox and MIRToolbox).
+The Musical Gesture Toolbox[https://www.uio.no/ritmo/english/research/labs/fourms/software/musicalgesturestoolbox/mgt-matlab/index.html](https://www.uio.no/ritmo/english/research/labs/fourms/software/musicalgesturestoolbox/mgt-matlab/index.html) is a toolbox (for Matlab, Python, Max, and Terminal) for analyzing music-related body motion, using sets of audio, video and motion capture data as source material (building upon MoCap Toolbox and MIRToolbox).
 
 
 ##	Real-time streaming
-(Some) motion capture systems, like the Qualisys systems, have the possibility to stream motion capture data in real time, so that the 3D/6D coordinates are send to a receiving software (e.g., [Max](http://cycling74.com)) that, for instance, extracts parameters from the movement data that control sound parameters and create musical output resulting in an interactive performance. EyesWeb, for instance, has been used for such interactive performances, in which, for instance, dance movement were used to change parameters of sound, music, and visuals. The set of Max abstractions called [Modosc](https://github.com/motiondescriptors/modosc) offers the possibility to extract movement features from mocap data in real time for movement analysis and interactive sound design. 
+(Some) motion capture systems, like the Qualisys systems, have the possibility to stream motion capture data in real time, so that the 3D/6D coordinates are send to a receiving software (e.g., Max[http://cycling74.com](http://cycling74.com)) that, for instance, extracts parameters from the movement data that control sound parameters and create musical output resulting in an interactive performance. EyesWeb, for instance, has been used for such interactive performances, in which, for instance, dance movement were used to change parameters of sound, music, and visuals. The set of Max abstractions called Modosc[https://github.com/motiondescriptors/modosc](https://github.com/motiondescriptors/modosc) offers the possibility to extract movement features from mocap data in real time for movement analysis and interactive sound design. 
 
 
 # References
